2001-07-11 Kevin Vandersloot <kfv101@psu.edu>

	*prettytable.c: remove some unneeded stuff

	*proctable.c (update_info): free the string if it exists to
	fix a memory leak.

2001-07-10 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (proctable_new): check to see that the tree
	is created from the spec file and bail out if not.

	*memmaps.c (create_memmaps_tree): do the same here. Thus things
	work properly now and procman is stable once more. Ahhh.

	*proctable.etspec, memmaps.etspec: update initial default column
	widths and add memmaps.etspec

2001-07-10 Kevin Vandersloot <kfv101@psu.edu>

	*memmaps.c: put in same conditionals to load memmaps.etspec.
	It seems a bug in gal is causeing the crashes.

	*Makefile.am: add memmaps.etspec.

2001-07-09 Kevin Vandersloot <kfv101@psu.edu>

	Beginning to move e-tree specs to different file. Thanks to 
	Carlos Perello Marin <carlos@gnome-db.org> for
	providing the initial patch.

	*interface.c (create_main_window): more cosmetic changes.

	*Makefile.am: add proctable.etspec. Beginning of attempt
	to move the spec into a different file for 
	internationalization purposes.

	*proctable.c: put in if statement to open spec from a 
	different file. Seems to crash and burn when I try though.
	Change justification to center for most of the items.

2001-07-09 Kevin Vandersloot <kfv101@psu.edu>

	*interface.c (create_main_window): change signal for info
	button to clicked instead of pressed so it works using the 
	keyboard. 
	Also make the More Info and Less Info labels saner
	and make sure if the info is already shown at startup set the
	label to Less Info.
	Some cosmetic inprovements to the progress meters.

2001-07-08 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c: add process status column

	*procman.c: change default to show tree_view

2001-07-08 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (inset_info_to_tree): comment out the call
	to not expand the parent node. I think this might be