@@ -1,5 +1,10 @@
 2001-07-11 Kevin Vandersloot <kfv101@psu.edu>
 
+	*proctable.c, memmaps.c: hack around a bug in gal.
+	Some more cosmetic changes.
+
+2001-07-11 Kevin Vandersloot <kfv101@psu.edu>
+
 	*prettytable.c: remove some unneeded stuff
 
 	*proctable.c (update_info): free the string if it exists to
